fixing spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -398,6 +398,7 @@ h3 {
 }
 
 #animal-breed-box-content {
+  position: relative;
   max-width: 75%;
   max-height: 75%;
 }
